--- a/kostra.tex
+++ b/kostra.tex
@@ -11,6 +11,14 @@
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \lstset{language=VHDL,commentstyle=\color{mygreen},tabsize=4}
 
+\usepackage{fancyhdr}
+\pagestyle{fancyplain}
+\fancyhf{}
+\renewcommand{\headrulewidth}{0pt}
+
+\cfoot{\hfill © Jakuje \hfill \thepage }
+
+
 \begin{document}
 
 \tableofcontents
